--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <article class="card">
         <h2>Фритрек и нулевой спринт: Подготовка к работе</h2>
         <div class="card-image-container">
-          <img class="card-image saturate-light" src="images\1-cat-small.jpg" alt="Кот на весах">
+          <img class="card-image saturate" src="images/1-cat-small.jpg" alt="Кот на весах">
           <h3>Еще совсем малыш в этом деле</h3>
         </div>
         <p>Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу.
@@ -49,7 +49,7 @@
       <article class="card">
         <h2>1 спринт: Я — чистый лист</h2>
         <div class="card-image-container">
-          <img class="card-image grayscale" src="images\2-cat-lie.jpg" alt="Кот грустно лежит">
+          <img class="card-image grayscale" src="images/2-cat-lie.jpg" alt="Кот грустно лежит">
           <h3>Очень потерянный</h3>
         </div>
         <p>На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. 
@@ -75,7 +75,7 @@
       <article class="card">
         <h2>1 спринт: А если не получится?</h2>
         <div class="card-image-container">
-          <img class="card-image contrast" src="images\3-cat-smile.jpg" alt="Кот и ноутбук" loading="lazy">
+          <img class="card-image super-saturate" src="images/3-cat-smile.jpg" alt="Кот и ноутбук" loading="lazy">
           <h3>Я и мой первый проект</h3>
         </div>
         <p>Первый проект — позади! Но это всё ещё самое начало пути. 
@@ -101,7 +101,7 @@
       <article class="card">
         <h2>2 спринт: Погоня за идеалом</h2>
         <div class="card-image-container">
-          <img class="card-image saturate-dark" src="images\4-cat-paint.jpg" alt="Кота рисуют" loading="lazy">
+          <img class="card-image saturate-dark" src="images/4-cat-paint.jpg" alt="Кота рисуют" loading="lazy">
           <h3>А вдруг так прокатит?</h3>
         </div>
         <p>На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. 
@@ -128,7 +128,7 @@
       <article class="card">
         <h2>2 спринт: О тех, кто рядом</h2>
         <div class="card-image-container">
-          <img class="card-image hue-rotate" src="images\5-two-cats.jpg" alt="Два кота и чай" loading="lazy">
+          <img class="card-image hue-rotate" src="images/5-two-cats.jpg" alt="Два кота и чай" loading="lazy">
           <h3>Вместе мы - сила!</h3>
         </div>
         <p>Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). 
@@ -155,7 +155,7 @@
       <article class="card">
         <h2>3 спринт: Обходные стратегии</h2>
         <div class="card-image-container">
-          <img class="card-image sepia" src="images\6-top-cat.jpg" alt="Кот на шкафу" loading="lazy">
+          <img class="card-image sepia" src="images/6-top-cat.jpg" alt="Кот на шкафу" loading="lazy">
           <h3>Сложности с адаптацией</h3>
         </div>
         <p>На этом курсе вы постоянно решали разные задачи. 
@@ -182,7 +182,7 @@
       <article class="card">
         <h2>3 спринт: Когда опускаются руки</h2>
         <div class="card-image-container">
-          <img class="card-image contrast" src="images\7-sport-cat.jpg" alt="Кот подтягивается" loading="lazy">
+          <img class="card-image contrast" src="images/7-sport-cat.jpg" alt="Кот подтягивается" loading="lazy">
           <h3>В поиске баланса</h3>
         </div>
         <p>Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. 
@@ -209,7 +209,7 @@
       <article class="card">
         <h2>«Сейчас я здесь»</h2>
         <div class="card-image-container">
-          <img class="card-image saturate-dark" src="images\8-cat-frog.jpg" alt="Кот-лягушка" loading="lazy">
+          <img class="card-image saturate-dark" src="images/8-cat-frog.jpg" alt="Кот-лягушка" loading="lazy">
           <h3>Возьмите меня на работу, пожалуйста</h3>
         </div>
         <p>Сейчас вы уже очень много знаете о вёрстке. Но это только начало. 
