--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <h2>Фритрек и нулевой спринт: Подготовка к работе</h2>
         <div class="card-image-container">
           <img class="card-image saturate" src="images/1-cat-small.jpg" alt="Кот на весах">
-          <h3>Еще совсем малыш в этом деле</h3>
+          <span class="card-label">Еще совсем малыш в этом деле</span>
         </div>
         <p>Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу.
            И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
         <p>Казалось, что ты такой маленький, а эти знания такие сложные, что ты это не осилишь.</p>
         <div class="card-button-container">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class= "contour" fill="var(--accent-color)" d="M12 6H9v3h3zm3 0h-3v3h3zM9 9H6v3h3zm0 3H6v3h3zm0 3H6v3h3zm9-9h-3v3h3zm-6 12H9v3h3zm3 3h-3v3h3zm3 3h-3v3h3zm9-18h3v3h-3zm-3 0h3v3h-3zm6 3h3v3h-3zm0 3h3v3h-3zm0 3h3v3h-3zm-9-9h3v3h-3zm6 12h3v3h-3zm-3 3h3v3h-3zm-3 3h3v3h-3zm0 3h-3v3h3zm0-18h-3v3h3z"/>
@@ -41,7 +41,7 @@
                 <path class= "sparks" fill="var(--animation-fill-color)" d="M36 13h3v3h-3zm-9 14h3v3h-3zm-9 6h3v3h-3zm-9-6h3v3H9zM24 0h3v3h-3zm9 3h3v3h-3zM3 3h3v3H3zm9-3h3v3h-3zM0 13h3v3H0z"/>
               </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -50,14 +50,14 @@
         <h2>1 спринт: Я — чистый лист</h2>
         <div class="card-image-container">
           <img class="card-image grayscale" src="images/2-cat-lie.jpg" alt="Кот грустно лежит">
-          <h3>Очень потерянный</h3>
+          <span class="card-label">Очень потерянный</span>
         </div>
         <p>На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. 
           Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. 
           Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?</p>
         <p>Всё так и было, зато теперь трудности того спринта ощущаются как-то вот так.</p>
         <div class="card-button-container">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class= "contour" fill="var(--accent-color)" d="M12 6H9v3h3zm3 0h-3v3h3zM9 9H6v3h3zm0 3H6v3h3zm0 3H6v3h3zm9-9h-3v3h3zm-6 12H9v3h3zm3 3h-3v3h3zm3 3h-3v3h3zm9-18h3v3h-3zm-3 0h3v3h-3zm6 3h3v3h-3zm0 3h3v3h-3zm0 3h3v3h-3zm-9-9h3v3h-3zm6 12h3v3h-3zm-3 3h3v3h-3zm-3 3h3v3h-3zm0 3h-3v3h3zm0-18h-3v3h3z"/>
@@ -67,7 +67,7 @@
                 <path class= "sparks" fill="var(--animation-fill-color)" d="M36 13h3v3h-3zm-9 14h3v3h-3zm-9 6h3v3h-3zm-9-6h3v3H9zM24 0h3v3h-3zm9 3h3v3h-3zM3 3h3v3H3zm9-3h3v3h-3zM0 13h3v3H0z"/>
               </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -76,14 +76,14 @@
         <h2>1 спринт: А если не получится?</h2>
         <div class="card-image-container">
           <img class="card-image super-saturate" src="images/3-cat-smile.jpg" alt="Кот и ноутбук" loading="lazy">
-          <h3>Я и мой первый проект</h3>
+          <span class="card-label">Я и мой первый проект</span>
         </div>
         <p>Первый проект — позади! Но это всё ещё самое начало пути. 
           Радость могла быстро померкнуть и смениться ожиданием провала. 
           Или вы, наоборот, могли вдохновиться успехами и поверить в себя.</p>
         <p>Я честно гордилась, что у меня получилось реализовать такой красивый макет в жизнь.</p>
         <div class="card-button-container">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
               <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class= "contour" fill="var(--accent-color)" d="M12 6H9v3h3zm3 0h-3v3h3zM9 9H6v3h3zm0 3H6v3h3zm0 3H6v3h3zm9-9h-3v3h3zm-6 12H9v3h3zm3 3h-3v3h3zm3 3h-3v3h3zm9-18h3v3h-3zm-3 0h3v3h-3zm6 3h3v3h-3zm0 3h3v3h-3zm0 3h3v3h-3zm-9-9h3v3h-3zm6 12h3v3h-3zm-3 3h3v3h-3zm-3 3h3v3h-3zm0 3h-3v3h3zm0-18h-3v3h3z"/>
@@ -93,7 +93,7 @@
                 <path class= "sparks" fill="var(--animation-fill-color)" d="M36 13h3v3h-3zm-9 14h3v3h-3zm-9 6h3v3h-3zm-9-6h3v3H9zM24 0h3v3h-3zm9 3h3v3h-3zM3 3h3v3H3zm9-3h3v3h-3zM0 13h3v3H0z"/>
               </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -102,7 +102,7 @@
         <h2>2 спринт: Погоня за идеалом</h2>
         <div class="card-image-container">
           <img class="card-image saturate-dark" src="images/4-cat-paint.jpg" alt="Кота рисуют" loading="lazy">
-          <h3>А вдруг так прокатит?</h3>
+          <span class="card-label">А вдруг так прокатит?</span>
         </div>
         <p>На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. 
           Вы могли попытаться погнаться за идеалом и понять, что он недостижим. 
@@ -110,7 +110,7 @@
         <p>Мой лучший вывод за последние годы жизни: "нужно решать проблемы по мере их поступления". 
           Точно так же я поступала и здесь. Старалась делать то, что могу, а что не могу - хоть как-то осилить.</p>
         <div class="card-button-container">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class= "contour" fill="var(--accent-color)" d="M12 6H9v3h3zm3 0h-3v3h3zM9 9H6v3h3zm0 3H6v3h3zm0 3H6v3h3zm9-9h-3v3h3zm-6 12H9v3h3zm3 3h-3v3h3zm3 3h-3v3h3zm9-18h3v3h-3zm-3 0h3v3h-3zm6 3h3v3h-3zm0 3h3v3h-3zm0 3h3v3h-3zm-9-9h3v3h-3zm6 12h3v3h-3zm-3 3h3v3h-3zm-3 3h3v3h-3zm0 3h-3v3h3zm0-18h-3v3h3z"/>
@@ -120,7 +120,7 @@
                 <path class= "sparks" fill="var(--animation-fill-color)" d="M36 13h3v3h-3zm-9 14h3v3h-3zm-9 6h3v3h-3zm-9-6h3v3H9zM24 0h3v3h-3zm9 3h3v3h-3zM3 3h3v3H3zm9-3h3v3h-3zM0 13h3v3H0z"/>
               </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -129,7 +129,7 @@
         <h2>2 спринт: О тех, кто рядом</h2>
         <div class="card-image-container">
           <img class="card-image hue-rotate" src="images/5-two-cats.jpg" alt="Два кота и чай" loading="lazy">
-          <h3>Вместе мы - сила!</h3>
+          <span class="card-label">Вместе мы - сила!</span>
         </div>
         <p>Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). 
           Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, 
@@ -137,7 +137,7 @@
         <p>Я прохожу этот курс вместе с моим мужем. И когда нам трудно, мы поддерживаем друг друга. У каждого из нас есть свои слабые и западающие темы, но также и свои сильные стороны. 
           Поэтому, если кто-то из нас что-то не понял в новом уроке, второй обычно готов это объяснить или подсказать в чем ошибка в тренажере. Мы уже почти как маленькая команда!</p>
         <div class="card-button-container">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class= "contour" fill="var(--accent-color)" d="M12 6H9v3h3zm3 0h-3v3h3zM9 9H6v3h3zm0 3H6v3h3zm0 3H6v3h3zm9-9h-3v3h3zm-6 12H9v3h3zm3 3h-3v3h3zm3 3h-3v3h3zm9-18h3v3h-3zm-3 0h3v3h-3zm6 3h3v3h-3zm0 3h3v3h-3zm0 3h3v3h-3zm-9-9h3v3h-3zm6 12h3v3h-3zm-3 3h3v3h-3zm-3 3h3v3h-3zm0 3h-3v3h3zm0-18h-3v3h3z"/>
@@ -147,7 +147,7 @@
                 <path class= "sparks" fill="var(--animation-fill-color)" d="M36 13h3v3h-3zm-9 14h3v3h-3zm-9 6h3v3h-3zm-9-6h3v3H9zM24 0h3v3h-3zm9 3h3v3h-3zM3 3h3v3H3zm9-3h3v3h-3zM0 13h3v3H0z"/>
               </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -156,7 +156,7 @@
         <h2>3 спринт: Обходные стратегии</h2>
         <div class="card-image-container">
           <img class="card-image sepia" src="images/6-top-cat.jpg" alt="Кот на шкафу" loading="lazy">
-          <h3>Сложности с адаптацией</h3>
+          <span class="card-label">Сложности с адаптацией</span>
         </div>
         <p>На этом курсе вы постоянно решали разные задачи. 
           В какой-то момент вам могло показаться, что решения просто иссякли. 
@@ -164,7 +164,7 @@
         <p>Мне нравится наводить красоту. Но вот адаптивность мне казалась очень скучной и душной темой.
            В принципе мало что изменилось, но я теперь знаю, что это такое.</p>
         <div class="card-button-container">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class= "contour" fill="var(--accent-color)" d="M12 6H9v3h3zm3 0h-3v3h3zM9 9H6v3h3zm0 3H6v3h3zm0 3H6v3h3zm9-9h-3v3h3zm-6 12H9v3h3zm3 3h-3v3h3zm3 3h-3v3h3zm9-18h3v3h-3zm-3 0h3v3h-3zm6 3h3v3h-3zm0 3h3v3h-3zm0 3h3v3h-3zm-9-9h3v3h-3zm6 12h3v3h-3zm-3 3h3v3h-3zm-3 3h3v3h-3zm0 3h-3v3h3zm0-18h-3v3h3z"/>
@@ -174,7 +174,7 @@
                 <path class= "sparks" fill="var(--animation-fill-color)" d="M36 13h3v3h-3zm-9 14h3v3h-3zm-9 6h3v3h-3zm-9-6h3v3H9zM24 0h3v3h-3zm9 3h3v3h-3zM3 3h3v3H3zm9-3h3v3h-3zM0 13h3v3H0z"/>
               </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -183,7 +183,7 @@
         <h2>3 спринт: Когда опускаются руки</h2>
         <div class="card-image-container">
           <img class="card-image contrast" src="images/7-sport-cat.jpg" alt="Кот подтягивается" loading="lazy">
-          <h3>В поиске баланса</h3>
+          <span class="card-label">В поиске баланса</span>
         </div>
         <p>Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. 
           Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. 
@@ -191,7 +191,7 @@
         <p>Мне помогало каждый день делать по чуть-чуть. Это лучшая привычка - сделай хоть что-то, чем совсем ничего. 
           Потому что иногда в процессе входишь во вкус и делаешь даже больше, чем нужно.</p>
         <div class="card-button-container">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class= "contour" fill="var(--accent-color)" d="M12 6H9v3h3zm3 0h-3v3h3zM9 9H6v3h3zm0 3H6v3h3zm0 3H6v3h3zm9-9h-3v3h3zm-6 12H9v3h3zm3 3h-3v3h3zm3 3h-3v3h3zm9-18h3v3h-3zm-3 0h3v3h-3zm6 3h3v3h-3zm0 3h3v3h-3zm0 3h3v3h-3zm-9-9h3v3h-3zm6 12h3v3h-3zm-3 3h3v3h-3zm-3 3h3v3h-3zm0 3h-3v3h3zm0-18h-3v3h3z"/>
@@ -201,7 +201,7 @@
                 <path class= "sparks" fill="var(--animation-fill-color)" d="M36 13h3v3h-3zm-9 14h3v3h-3zm-9 6h3v3h-3zm-9-6h3v3H9zM24 0h3v3h-3zm9 3h3v3h-3zM3 3h3v3H3zm9-3h3v3h-3zM0 13h3v3H0z"/>
               </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -210,7 +210,7 @@
         <h2>«Сейчас я здесь»</h2>
         <div class="card-image-container">
           <img class="card-image saturate-dark" src="images/8-cat-frog.jpg" alt="Кот-лягушка" loading="lazy">
-          <h3>Возьмите меня на работу, пожалуйста</h3>
+          <span class="card-label">Возьмите меня на работу, пожалуйста</span>
         </div>
         <p>Сейчас вы уже очень много знаете о вёрстке. Но это только начало. 
           Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. 
@@ -219,7 +219,7 @@
         <p>Этот мир программирования такой сложный, что я до сих пор боюсь, что не справлюсь. 
           Но если вдруг у меня получится, и я доживу до своего первого собеседования, то точно буду выглядеть на нём вот так.</p>
         <div class="card-button-container">
-          <button class="card__icon-button">
+          <button class="card__icon-button" type="button">
             <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="39" height="36" fill="none" viewBox="0 0 39 36">
                 <g class="heart">
                   <path class= "contour" fill="var(--accent-color)" d="M12 6H9v3h3zm3 0h-3v3h3zM9 9H6v3h3zm0 3H6v3h3zm0 3H6v3h3zm9-9h-3v3h3zm-6 12H9v3h3zm3 3h-3v3h3zm3 3h-3v3h3zm9-18h3v3h-3zm-3 0h3v3h-3zm6 3h3v3h-3zm0 3h3v3h-3zm0 3h3v3h-3zm-9-9h3v3h-3zm6 12h3v3h-3zm-3 3h3v3h-3zm-3 3h3v3h-3zm0 3h-3v3h3zm0-18h-3v3h3z"/>
@@ -229,12 +229,12 @@
                 <path class= "sparks" fill="var(--animation-fill-color)" d="M36 13h3v3h-3zm-9 14h3v3h-3zm-9 6h3v3h-3zm-9-6h3v3H9zM24 0h3v3h-3zm9 3h3v3h-3zM3 3h3v3H3zm9-3h3v3h-3zM0 13h3v3H0z"/>
               </svg>
           </button>
-          <button class="card__like-button">
+          <button class="card__like-button" type="button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
-      <button class="button-dialog-open" onclick="window['dialog'].showModal()">
+      <button class="button-dialog-open" onclick="window['dialog'].showModal()" type="button">
         <svg class="icon-dialog">
           <use href="./svg/icon-dialog.svg#icon-dialog"></use>
         </svg>
@@ -248,8 +248,8 @@
             </svg>
             <p class="button__text dialog-text">Вставьте дискету, чтобы продолжить</p>
           </div>
-            <button onclick="window['dialog'].close()">
-              <span class="button__text">ОК</span>
+            <button onclick="window['dialog'].close()" type="button">
+              <span class="button__text">ок</span>
             </button>
         </div>
       </dialog>
